--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = "^3.10"
 dependencies = [
-    "invoke (>=2.2.0,<3.0.0)"
+    "invoke (>=2.2.0,<3.0.0)",
+    "numpy (>=2.2.4,<3.0.0)"
 ]
 
 
