--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 requires-python = "^3.10"
 dependencies = [
     "invoke (>=2.2.0,<3.0.0)",
-    "numpy (>=2.2.4,<3.0.0)"
+    "numpy (>=2.2.4,<3.0.0)",
 ]
 
 
@@ -19,4 +19,6 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.5"
+pylint = "^3.3.6"
+autopep8 = "^2.3.2"
 
